@@ -18,6 +18,7 @@ This project receives help from these awesome contributors:
 - Frederic Aoustin
 - Zhaolong Zhu
 - Karthikeyan Singaravelan
+- Georgy Frolov
 
 
 Thanks
