@@ -9,12 +9,12 @@ import itertools
 from cli_helpers.utils import filter_dict_by_key
 from .preprocessors import (convert_to_string, truncate_string, override_missing_value,
                             style_output, HAS_PYGMENTS, Terminal256Formatter, StringIO,
-                            override_tab_value)
+                            override_tab_value, escape_newlines)
 
 supported_formats = ('ascii', 'double', 'github')
 preprocessors = (
     override_missing_value, convert_to_string, override_tab_value,
-    truncate_string, style_output
+    truncate_string, style_output, escape_newlines
 )
 
 table_format_handler = {
